background image fixed for desktop

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             </div>
           </div>
           <div class="text">"We needed some printed design as the one we ordered a week prior. 
-            Not only they find the original order, but we also received in time. excellent!"</div>
+            Not only they find the original order, but we also received in time. 
+            excellent!"</div>
         </div>
         <div class="testimonil-info">
           <div class="profile">
